--- a/login.html
+++ b/login.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
 </head>
 
+<img src="img/login-food.png" style="position:absolute; top:0; left:0; right:0; bottom:0; width:100%; height:100%"> 
+
+<div class="circle-container">
+    <centric>
 <body class="container">
-    <header><h1 class="text-center">FEEDback</h1></header>
+    <header><h1 class="logo-text">FEEDback</h1></header>
     <section>
         <div class="panel panel-primary">
-            <div class="text-center">
+            <div class="directions-text">
                 Input login credentials
             </div>
 
@@ -36,4 +41,7 @@
     <script src="scripts/firebaseconfig.js" charset="utf-8"></script>
     <script src="scripts/navigation.js" charset="utf-8"></script>
 </body>
+</centric>
+</div>
+
 </html>
