--- a/login.html
+++ b/login.html
@@ -32,8 +32,8 @@
                 <input class="form-control" type="password" id="passwordInput" placeholder="password">   
             </div>
 
-            <button onClick="login(); toIndex()" id="login" class="btn btn-outline-primary">Login</button>
-            <button onClick="toRegister()" id="register" class="btn btn-outline-primary">Register</button>
+            <button onClick="login(); toIndex()" id="login" class="btn btn-danger">Login</button>
+            <button onClick="toRegister()" id="register" class="btn btn-outline-danger">Register</button>
 
             </div>
         </div>
