Centered register + login buttons.

--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                 <input class="form-control" type="password" id="passwordInput" placeholder="password">   
             </div>
 
-            <button onClick="login(); toIndex()" id="login" class="btn btn-danger">Login</button>
+            <button onClick="login(); toIndex()" id="login" class="btn btn-danger" style="margin-left:65px">Login</button>
             <button onClick="toRegister()" id="register" class="btn btn-outline-danger">Register</button>
 
             </div>
