--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
 </head>
 
-<div>YOU DID IT!</div>
+<div>YOU DID IT!!!</div>
 
 <button onClick="logout(); toLogin()" id="logout" class="btn btn-outline-primary">Logout</button>
 
