--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <div>YOU DID IT!!!</div>
+<body>
+<input type="file" id="image_input" accept="image/png, image/jpg"
+
+<div id="display_image"></div>
 
 <button onClick="logout(); toLogin()" id="logout" class="btn btn-outline-primary">Logout</button>
 
