Polished registration and login navigation.

--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
                 <input class="form-control" type="password" id="passwordInput" placeholder="password">   
             </div>
 
-            <button onClick="register(); toLogin()" id="register" class="btn btn-danger" style="margin-left:40px">Register</button>
+            <button onClick="register()" id="register" class="btn btn-danger" style="margin-left:40px">Register</button>
             <button onClick="toLogin()" id="login" class="btn btn-outline-danger">Login</button>
 
             </div>
