--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html land="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>User Page</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+    <!--<link rel="stylesheet" href="stylesheets/styles.css" />-->
+
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-storage.js"></script>
 </head>
 
-<div>YOU DID IT!!!</div>
 <body>
-<input type="file" id="image_input" accept="image/png, image/jpg"
+    <main>
+        <style>
+            img {
+                height: 200px;
+                width: 200px;
+                border: 2px solid black;
+            }
+        </style>
 
-<div id="display_image"></div>
+        <!--<input type="file" id="image_input" accept="image/png, image/jpg"><img class="thumbnail-image" src="" />-->
 
-<button onClick="logout(); toLogin()" id="logout" class="btn btn-outline-primary">Logout</button>
+        Image Name <input id="namebox" type="text"> <br><br>
+        <img id="image">
+        <label id="upProgress"></label> <br><br>
+
+        <button id="select">Select Image</button>
+        <button id="upload">Upload Image</button>
+        <button id="retrieve">Retrieve Image</button> <br><br>
+        <button onClick="logout(); toLogin()" id="logout" class="btn btn-outline-primary">Logout</button>
+    </main>
 
     <script src="scripts/navigation.js" charset="utf-8"></script>
     <script src="scripts/firebaseconfig.js" charset="utf-8"></script>
+    <script src="scripts/image.js" charset="utf-8"></script>
 </body>
+
 </html>
