--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <!--<link rel="stylesheet" href="stylesheets/styles.css" />-->
+    <link rel="stylesheet" href="stylesheets/styles.css" />
 
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
@@ -18,30 +18,41 @@
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-storage.js"></script>
 </head>
 
+<div class="square-container">
+    <centric>
  <body class="container">
         <style>
             img {
-                height: 200px;
-                width: 200px;
+                height: 400px;
+                width: 400px;
                 border: 2px solid black;
+                background: white;
             }
         </style>
 
         <!--<input type="file" id="image_input" accept="image/png, image/jpg"><img class="thumbnail-image" src="" />-->
 
-        Image Name <input id="namebox" type="text"> <br><br>
+        <div class="form-group">
+        <label for="namebox" style="color:white">Image Title</label>
+        <input class="form-control" id="namebox" type="text"> <br><br>
+        </div>
         <img id="image">
         <label id="upProgress"></label> <br><br>
 
-        <button id="select">Select Image</button>
-        <button id="upload">Upload Image</button>
-        <button id="retrieve">Retrieve Image</button> <br><br>
-        <button onClick="logout(); toLogin()" id="logout" class="btn btn-danger">Logout</button>
+        <button-alignment>
+        <button id="select" class="btn btn-warning" style="font-family: ceviche; margin-left: 35px;">Select Image</button>
+        <button id="upload" class="btn btn-warning" style="font-family: ceviche;">Upload Image</button>
+        <button id="retrieve" class="btn btn-warning" style="font-family: ceviche;">Retrieve Image</button>
+        </button-alignment> 
+        <br><br>
+        <button onClick="logout(); toLogin()" id="logout" class="btn btn-danger" style="margin-left: 154px">Logout</button>
 
     <script src="scripts/navigation.js" charset="utf-8"></script>
     <script src="scripts/firebaseconfig.js" charset="utf-8"></script>
     <script src="scripts/image.js" charset="utf-8"></script>
 </body> 
+</centric>
+</div>
 
 
 </html>
