--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="stylesheets/login.css"/>
+    <link rel="stylesheet" href="stylesheets/index.css"/>
 
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
@@ -25,7 +25,7 @@
             img {
                 height: 400px;
                 width: 400px;
-                border: 2px solid black;
+                border: 1px solid black;
                 background: white;
             }
         </style>
@@ -33,7 +33,7 @@
         <!--<input type="file" id="image_input" accept="image/png, image/jpg"><img class="thumbnail-image" src="" />-->
 
         <div class="form-group">
-        <label for="namebox" style="color:white">Image Title</label>
+        <label for="namebox" style="color:black ">Image Title</label>
         <input class="form-control" id="namebox" type="text"> <br><br>
         </div>
         <img id="image">
@@ -45,7 +45,7 @@
         <button id="retrieve" class="btn btn-warning" style="font-family: ceviche;">Retrieve Image</button>
         </button-alignment> 
         <br><br>
-        <button onClick="logout(); toLogin()" id="logout" class="btn btn-danger" style="margin-left: 154px">Logout</button>
+        <button onClick="logout(); toLogin()" id="logout" class="btn btn-danger" style="margin-left: 154px;">Logout</button>
 
     <script src="scripts/navigation.js" charset="utf-8"></script>
     <script src="scripts/firebaseconfig.js" charset="utf-8"></script>
