--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
     <link rel="stylesheet" href="stylesheets/index.css"/>
 
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
@@ -33,16 +34,16 @@
         <!--<input type="file" id="image_input" accept="image/png, image/jpg"><img class="thumbnail-image" src="" />-->
 
         <div class="form-group">
-        <label for="namebox" style="color:black ">Image Title</label>
+        <label for="namebox" style="color:black; font-family: century-gothic; font-size: 18px;">Image Title</label>
         <input class="form-control" id="namebox" type="text"> <br><br>
         </div>
         <img id="image">
         <label id="upProgress"></label> <br><br>
 
         <button-alignment>
-        <button id="select" class="btn btn-warning" style="font-family: ceviche; margin-left: 35px;">Select Image</button>
-        <button id="upload" class="btn btn-warning" style="font-family: ceviche;">Upload Image</button>
-        <button id="retrieve" class="btn btn-warning" style="font-family: ceviche;">Retrieve Image</button>
+        <button id="select" class="btn btn-warning" style="color: black;; margin-left: 35px;">Select Image</button>
+        <button id="upload" class="btn btn-warning" style="color: black;">Upload Image</button>
+        <button id="retrieve" class="btn btn-warning" style="color: black;">Retrieve Image</button>
         </button-alignment> 
         <br><br>
         <button onClick="logout(); toLogin()" id="logout" class="btn btn-danger" style="margin-left: 154px;">Logout</button>
