--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
     <script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-storage-compat.js"></script>
 </head>
 
+<img src="img/login-food.png" style="position:absolute; top:0; left:0; right:0; bottom:0; width:100%; height:100%"> 
+
 <div class="square-container">
     <centric>
 
         <body class="container">
-            <style>
+          <style>
                 img {
                     height: 400px;
                     width: 400px;
                     border: 1px solid black;
-                    background: white;
                 }
-            </style>
+        </style>
 
             <div class="form-group">
-                <label for="namebox" style="color:black; font-family: century-gothic; font-size: 18px;">Image
+                <label for="namebox" style="color:black; font-family: quicksand; font-weight: bold;">Image 
                     Title</label>
                 <input class="form-control" id="namebox" type="text"> <br><br>
             </div>
@@ -42,15 +43,15 @@
 
             <div class="button">
                 <button-alignment>
-                    <button id="select" class="btn btn-warning" style="color: black;">Select Image</button>
-                    <button id="upload" class="btn btn-warning" style="color: black;">Upload Image</button>
-                    <button id="retrieve" class="btn btn-warning" style="color: black;">Retrieve Image</button>
+                    <button id="select" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Select Image</button>
+                    <button id="upload" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Upload Image</button>
+                    <button id="retrieve" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Retrieve Image</button>
                 </button-alignment>
                 <br><br>
             </div>
 
             <button onClick="logout(); toLogin()" id="logout" class="btn btn-danger"
-                style="margin-left: 154px;">Logout</button> <br><br>
+                style="margin-left: 154px; font-family: quicksand;">Logout</button> <br><br>
 
             <label id="upProgress"></label> <br><br>
 
