--- a/login.html
+++ b/login.html
@@ -21,21 +21,22 @@
     <header><h1 class="logo-text">FEEDback</h1></header>
     <section>
         <div class="panel panel-primary">
-            <div class="directions-text">
-                Input login credentials
+            <div class="directions-text" style="font-family: quicksand; font-weight: bold;">
+                Input Login Credentials
             </div>
+            <br>
 
             <div class="form-group">
-                <label for="Email">Email</label>
+                <label for="Email" style="font-family: quicksand;">Email</label>
                 <input class="form-control" name="emailAddress" id="emailInput" placeholder="email@somewhere.com">
             </div> 
             <div class="form-group">
-                <label for="Password">Password</label>
+                <label for="Password" style="font-family: quicksand;">Password</label>
                 <input class="form-control" type="password" id="passwordInput" placeholder="password">   
             </div>
 
-            <button onClick="login()" id="login" class="btn btn-danger" style="margin-left:65px">Login</button>
-            <button onClick="toRegister()" id="register" class="btn btn-outline-danger">Register</button>
+            <button onClick="login()" id="login" class="btn btn-danger" style="margin-left:65px; font-family: quicksand;">Login</button>
+            <button onClick="toRegister()" id="register" class="btn btn-outline-danger" style="font-family: quicksand;">Register</button>
 
             </div>
         </div>
