More style changes

--- a/login.html
+++ b/login.html
@@ -27,11 +27,11 @@
             <br>
 
             <div class="form-group">
-                <label for="Email" style="font-family: quicksand;">Email</label>
+                <label for="Email" style="font-family: quicksand; font-weight: bold;">Email</label>
                 <input class="form-control" name="emailAddress" id="emailInput" placeholder="email@somewhere.com">
             </div> 
             <div class="form-group">
-                <label for="Password" style="font-family: quicksand;">Password</label>
+                <label for="Password" style="font-family: quicksand; font-weight: bold;">Password</label>
                 <input class="form-control" type="password" id="passwordInput" placeholder="password">   
             </div>
 
