--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <button-alignment>
                     <button id="select" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Select Image</button>
                     <button id="upload" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Upload Image</button>
-                    <button id="retrieve" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Retrieve Image</button>
+                    <button id="show" class="btn btn-warning" style="color: black; font-family: quicksand; font-weight: bold;">Show Images</button>
                 </button-alignment>
                 <br><br>
             </div>
@@ -54,6 +54,14 @@
                 style="margin-left: 154px; font-family: quicksand;">Logout</button> <br><br>
 
             <label id="upProgress"></label> <br><br>
+
+            <br><br>
+
+            <!-- This div is where the images are dynamically added from image.js -->
+            <!-- STYLE ME PLS :) -->
+            <div id="list" class="imageList">
+
+            </div>
 
             <script src="scripts/navigation.js" charset="utf-8"></script>
             <script src="scripts/firebaseconfig.js" charset="utf-8"></script>
